<resources>
    <string name="app_name">Chatter Box</string>
    <string name="todo">TODO</string>
    <string name="chatter_box">Chatter Box</string>
    <string name="our_neighbour_our_community">Our neighbour, Our community...</string>
    <string name="jamii">Jamii</string>
    <string name="chats">Chats</string>
    <string name="community">Community</string>
    <string name="we_are_all_about_family">We are all about Family...</string>
    <string name="service_for_all">Service for all</string>
    <string name="tab_indicator">tab indicator</string>
    <string name="redefining_youth_culture">Redefining Youth Culture...</string>
    <string name="young_or_old">Young or Old</string>
    <string name="there_is_something_for_everyone">There is something for everyone...</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="chat_box">Chat Box</string>
    <string name="title_activity_location">Map</string>


</resources>