<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/email_address"
        android:layout_width="278dp"
        android:layout_height="39dp"
        android:layout_marginTop="72dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email_address"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="279dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:autofillHints="First Name"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/first_name"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:autofillHints="First Name"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/last_name"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:autofillHints="First Name"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="276dp"
        android:background="@color/Black"
        android:text="@string/sign_up"
        android:textColor="@color/White"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginBottom="276dp"
        android:indeterminateTint="@color/Black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        app:layout_constraintVertical_bias="0.479" />
</androidx.constraintlayout.widget.ConstraintLayout>