<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="235dp"
        android:layout_height="380dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="280dp"
        android:src="@drawable/img_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="208dp"
        android:layout_height="124dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/alex_brush"
        android:gravity="center_horizontal"
        android:text="@string/we_are_all_about_family"
        android:textColor="#000000"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="219dp"
        android:layout_height="33dp"
        android:layout_marginTop="548dp"
        android:fontFamily="@font/belleza"
        android:gravity="center_horizontal"
        android:text="@string/service_for_all"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/tab_indicator"
        android:src="@drawable/tab1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
